--- a/css/style.css
+++ b/css/style.css
@@ -158,4 +158,11 @@ img {
         align-items: center;
     }
 
+    .lessons .col,
+    .steps .col,
+    .why-us .col-left,
+    .why-us .col-right{
+        width: 90%;
+    }
+
 }
