--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,11 @@ img {
         width: 90%;
     }
 
+    .why-us{
+        background-color: #222222;
+        margin-top: -50px;
+        margin-bottom: -50px;
+    }
 }
 
 /* Bonus */
